--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
-    "visio-cms": "file:../visio-builder-lib"
+    "visio-cms": "^0.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
