--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "next build",
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
     "format": "prettier --write '**/*.ts' '**/*.tsx'",
     "lint": "next lint && prettier --check '**/*.ts' '**/*.tsx'"
