--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-icons": "^1.3.0",
+    "dayjs": "^1.11.10",
+    "flowbite-react": "^0.7.2",
     "jose": "^5.1.1",
     "lucide-react": "^0.292.0",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "tailwind-merge": "^1.14.0",
-    "visio-cms": "^0.6.0"
+    "visio-cms": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
