--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-tailwindcss-datepicker": "^1.6.6",
     "tailwind-merge": "^1.14.0",
-    "visio-cms": "^0.14.1"
+    "visio-cms": "file:../visio-builder-lib"
   },
   "devDependencies": {
     "@types/node": "^20",
